about me update

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Steve Muiga</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Developer, Writer and Problem solver. </p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('assets/Muiga_Stephen_Resume.pdf')"
           >
             Download CV
           </button>
@@ -104,7 +104,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p><br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
@@ -118,13 +118,16 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
-            </p>
+              I'm a frontend developer, data scientist, and an IoT fancier.
+              I'm currently enrolled at <a href="https://www.jkuat.ac.ke/">JKUAT</a>
+              pursuing a BSc. Mathematics and<br /> Computer Science undergraduate degree(2020-2024).
+               <p>
+                Technology leads, society follows. I'm passionate about crafting immersive and engaging
+                experiences, playing my tiny little <br />part in shaping the future of the web.
+              </p>
+              <p>I write both technical and creative <a href="#projects">articles</a>
+                aiming to educate and inspire readers on a wide range of topics.</p>
+             </p>
           </div>
         </div>
       </div>
@@ -365,7 +368,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:muigastephen14@gmail.com">Example@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -388,7 +391,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
