--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
             class="icon"
             onclick="location.href='https://github.com/emuiga'"
           />
+          <img
+            src="./assets/v878-mind-24-removebg-preview.png"
+            alt="My Twitter profile"
+            class="icon"
+            onclick="location.href='https://twitter.com/smuiga2'"
+          />
+          <img
+            src="./assets/hashnode.png"
+            alt="My Blog profile"
+            class="icon"
+            onclick="location.href='https://muiga-steve.hashnode.dev/'"
+          />
+          <img
+            src="./assets/logo-ig-png-32457.png"
+            alt="My Ig profile"
+            class="icon"
+            onclick="location.href='https://www.instagram.com/muigz_/'"
+          />
         </div>
       </div>
     </section>
@@ -484,7 +502,7 @@
                 <div class="back">
                   <!-- back content -->
                     <span class="label info">Nyandarua, Onsite</span> <br>
-                    <span class="label info">May 2023 - Present</span>
+                    <span class="label info">May 2023 - August 2023</span>
                     <ul>
                       <ul>
                         <ul>I worked in the ICT department at Nyandarua County Assembly doubling as a support and a developer.</ul><br>
@@ -731,7 +749,8 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:muigastephen14@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:muigastephen14@gmail.com
+            &subject=" >muigastephen14@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
