--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assets/Muiga_Stephen_Resume.pdf')"
+            onclick="window.open('assets/Muiga_Resume.pdf')"
           >
             Download CV
           </button>
