--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assets/Muiga_Resume.pdf')"
+            onclick="window.open('assets/Muiga_Stephen_Resume.pdf')"
           >
             Download CV
           </button>
@@ -81,12 +81,12 @@
             class="icon"
             onclick="location.href='https://github.com/emuiga'"
           />
-          <img
+<!--           <img
             src="./assets/v878-mind-24-removebg-preview.png"
             alt="My Twitter profile"
             class="icon"
             onclick="location.href='https://twitter.com/smuiga2'"
-          />
+          /> -->
           <img
             src="./assets/hashnode.png"
             alt="My Blog profile"
