--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
             class="icon"
             onclick="location.href='https://github.com/emuiga'"
           />
-<!--           <img
+          <img
             src="./assets/v878-mind-24-removebg-preview.png"
             alt="My Twitter profile"
             class="icon"
-            onclick="location.href='https://twitter.com/smuiga2'"
-          /> -->
+            onclick="location.href='https://x.com/'"
+          />
           <img
             src="./assets/hashnode.png"
             alt="My Blog profile"
