--- a/index.html
+++ b/index.html
@@ -619,12 +619,12 @@
                 <p>A brief summary of my industrial attachment in Nyandarua County Government.</p>
                 </br>
                 <div class="btn-container" style="margin-top: 2.3rem ;">
-                  <button
+                  <!-- <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://muiga-steve.hashnode.dev/'"
                   >
                     See Blog
-                  </button>
+                  </button> -->
                   <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://muiga-steve.hashnode.dev/dear-assembly'"
@@ -652,12 +652,12 @@
                 <p>Documentation on how to perform EDA.</p>
                 </br>
                 <div class="btn-container" style="margin-top: 1.5rem ;">
-                  <button
+                  <!-- <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://muiga-steve.hashnode.dev/'"
                   >
                     See Blog
-                  </button>
+                  </button> -->
                   <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://muiga-steve.hashnode.dev/exploratory-data-analysis-using-data-visualization-techniques'"
@@ -684,12 +684,12 @@
                   <p>A short history of the JavaScript language.</p>
                   </br>
                   <div class="btn-container" style="margin-top: 3.7rem ;">
-                    <button
+                    <!-- <button
                       class="btn btn-color-2 project-btn"
                       onclick="location.href='https://muiga-steve.hashnode.dev/'"
                     >
                       See Blog
-                    </button>
+                    </button> -->
                     <button
                       class="btn btn-color-2 project-btn"
                       onclick="location.href='https://muiga-steve.hashnode.dev/historiography-js-emplotment'"
@@ -716,12 +716,12 @@
                 <p>Roadmap to learning Data Science.</p>
                 </br>
                 <div class="btn-container" style="margin-top: 1.4rem ;">
-                  <button
+                  <!-- <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://muiga-steve.hashnode.dev/'"
                   >
                     See Blog
-                  </button>
+                  </button> -->
                   <button
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='https://muiga-steve.hashnode.dev/data-science-roadmap-2023'"
